fix bugs on tablet device

--- a/_responsive.scss
+++ b/_responsive.scss
@@ -40,5 +40,10 @@
     }
   }
 
-  
+  .section-articles {
+    h2 {
+      font-size: 30px;
+    }
+  }
+
 }
