--- a/style.scss
+++ b/style.scss
@@ -253,6 +253,7 @@ body {
 
 .footer {
   background: linear-gradient(183.41deg, #67C3F3 -8.57%, #5A98F2 82.96%);
+  margin-top: 130px;
 
   .col {
     h5 {
